<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name" translatable="false">SudoQ</string>
    <string name="version_code" translatable="false">1.0.4</string>
    <string name="version_name" translatable="false">Berta</string>
    <string name="action_show_tutorial">Tutorial</string>
    <string name="action_new_profile">Create New Profile</string>
    <string name="action_delete_profile">Delete This Profile</string>
    <string name="action_switch_profile">Switch Profile</string>
    <string name="action_delete_all_gestures">Delete all gestures</string>
    <string name="action_delete_single_gesture">Delete specific gesture</string>
    <string name="action_restore_all">Restore all</string>
    <string name="error_profile_dir_not_found">Error! Profile folder could not be located!</string>
    <string name="error_sudoku_preference_incomplete">Error! Settings are incomplete!</string>
    <string name="error_gestures_no_library">Gestures not available!</string>
    <string name="error_thumbnail_get">Cannot capture screen on pause!</string>
    <string name="error_thumbnail_saved">Cannot save captured thumbnail!</string>
    <string name="error_thumbnail_load">Cannot load thumbnail for given game!</string>
    <string name="error_gestures_not_complete">You need to define Gestures for all Symbols in your Profile!</string>
    <string name="error_cant_switch_symbols">No alternate symbolset available!</string>
    <string name="toast_solved_wrong">A cell is not solved correctly</string>
    <string name="toast_solved_correct">Everything is solved correctly</string>
    <string name="toast_invalid_symbol">Invalid symbol</string>
    <string name="toast_restricted_symbol">Symbol is restricted</string>
    <string name="toast_stop_that">STOP THAT!!!</string>
    <string name="toast_multi_select_activated">Multi-selection mode activated</string>
    <string name="toast_multi_select_deactivated">Multi-selection mode deactivated</string>
    <string name="toast_cell_not_editable">This cell is not editable</string>
    <string name="button_exit_multi_select">Cancel Selection</string>
    <string name="splash_text">SudoQ is being initialized for the first start</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_won_title">You won!</string>
    <string name="dialog_surrender_title">You surrendered!</string>
    <string name="dialog_won_text">Do you want to quit?</string>
    <string name="dialog_won_statistics">Statistics</string>
    <string name="dialog_won_timeneeded">Time needed</string>
    <string name="dialog_won_score">Score</string>
    <string name="statistics_title">Statistics</string>
    <string name="statistics_counters">Counters</string>
    <string name="statistics_played_sudokus">Played sudokus</string>
    <string name="statistics_played_easy_sudokus"  >Played easy sudokus</string>
    <string name="statistics_played_medium_sudokus">Played medium sudokus</string>
    <string name="statistics_played_difficult_sudokus">Played difficult sudokus</string>
    <string name="statistics_played_infernal_sudokus" >Played infernal sudokus</string>
	<string name="statistics_records">Records</string>
	<string name="statistics_score">Highscore</string>
	<string name="statistics_fastest_solving_time">Fastest solving time</string>
	<string name="profile_list_profile_changed">Profile changed to</string>
	<string name="player_preferences_button_changeprofile">Change Profile</string>
    <string name="gesture_builder_title">Gesture Builder</string>
    <string name="gesture_builder_define_gesture">Define a Gesture</string>
    <string name="sf_gametypeselection_local_sudoku" >Sudoku</string>
    <string name="sf_gametypeselection_server_sudoku">Official Sudoku</string>
    <string name="sf_gametypeselection_create_mp"    >Create</string>
    <string name="sf_gametypeselection_join_mp"      >Join</string>
    <string name="subtitle_sudokupreferences_sudokutype">Sudoku Type:</string>
    <string name="subtitle_sudokupreferences_sudokucomplexity">Difficulty:</string>
    <string name="sf_sudokupreferences_start">Start</string>
    <string name="sf_sudokupreferences_sudokutype">Choose Sudoku Type</string>
    <string name="sf_sudokupreferences_type">Sudoku Type</string>
    <string name="sf_sudokupreferences_sudokucomplexity">Choose Difficulty</string>
    <string name="sf_sudokupreferences_complexity">Difficulty</string>
    <string name="sf_sudokupreferences_assistances">Adjust Assistances</string>
    <string name="sf_sudokupreferences_copying">Templates are currently being copied. Please wait a moment.</string>
    <string name="sf_sudoku_button_bookmark">Bookmark</string>
    <string name="sf_sudoku_button_close">Close</string>
    <string name="sf_sudoku_button_undo">Undo</string>
    <string name="sf_sudoku_button_redo">Redo</string>
    <string name="sf_sudoku_button_note">Note</string>
    <string name="sf_sudoku_button_hint">Hint</string>
    <string name="sf_sudoku_button_solve">Solve</string>
    <string name="sf_sudoku_button_autofill">Auto-fill unique candidates</string>
    <string name="sf_sudoku_autofill_success">Filled %d cells</string>
    <string name="sf_sudoku_autofill_no_candidates">No unique candidates found</string>
    <string name="sf_sudoku_new_game">New Game</string>
    <string name="sf_sudoku_assistances_title">Assistances</string>
    <string name="sf_sudoku_assistances_check">Check solution</string>
    <string name="sf_sudoku_assistances_solve_specific">Solve selected cell</string>
    <string name="sf_sudoku_assistances_solve_random">Solve random cell</string>
    <string name="sf_sudoku_assistances_solve_surrender">Surrender</string>
    <string name="sf_sudoku_assistances_back_to_valid_state">Back to last correct status</string>
    <string name="sf_sudoku_assistances_back_to_bookmark">Back to last bookmark</string>
    <string name="sf_sudoku_assistances_give_hint">Give a hint</string>
    <string name="sf_sudoku_title_gesture_input_entry">Input symbol via gesture</string>
    <string name="sf_sudoku_title_gesture_input_note">Input note via gesture</string>
    <string name="sf_sudoku_title_action_tree">Action History</string>
    <string name="sf_sudoku_assistances_crash">crash the app</string>
    <string name="sf_sudoku_button_fill_candidates">Fill Candidates</string>
    <string name="sf_sudoku_fill_candidates_progress">Filling candidates…</string>
    <string name="sf_sudoku_fill_candidates_success">Candidates filled successfully</string>
    <string name="title_mainmenu">SudoQ</string>
    <string name="title_gametypeselection">New Sudoku</string>
	<string name="subtitle_gametypeselection_mp">Multiplayer</string>
    <string name="complexity_easy">Easy</string>
    <string name="complexity_medium">Medium</string>
    <string name="complexity_difficult">Difficult</string>
    <string name="complexity_infernal">Infernal</string>
    <string name="complexity_arbitrary">Arbitrary</string>
    <string name="complexity_easy_desc">Perfect for beginners</string>
    <string name="complexity_medium_desc">A good challenge</string>
    <string name="complexity_difficult_desc">For experienced players</string>
    <string name="complexity_infernal_desc">Ultimate challenge</string>
    <string name="complexity_arbitrary_desc">No specific difficulty requirement</string>
    <string name="select_sudoku_type">Select Sudoku Type</string>
    <string name="loading">Loading...</string>
    <string name="back">Back</string>
    <string name="sudoku_type_standard_9x9"  >Standard-Sudoku 9x9</string>
    <string name="sudoku_type_standard_16x16">Standard-Sudoku 16x16</string>
    <string name="sudoku_type_standard_6x6"  >Standard-Sudoku 6x6</string>
    <string name="sudoku_type_standard_4x4"  >Standard-Sudoku 4x4</string>
    <string name="sudoku_type_squiggly_a_9x9">Squiggly-Sudoku 9x9</string>
    <string name="sudoku_type_squiggly_b_9x9">Squoggly-Sudoku 9x9</string>
    <string name="sudoku_type_stairstep_9x9" >Stairstep-Sudoku 9x9</string>
    <string name="sudoku_type_samurai"       >Samurai-Sudoku</string>
    <string name="sudoku_type_hyper"         >Hyper-Sudoku</string>
    <string name="sudoku_type_xsudoku"       >X-Sudoku</string>
    <string name="sudoku_type_dummy_longest_name">Standard-Sudoku 16x16</string>
    <string name="sf_sudokupreferences_title">Sudoku-Preferences</string>
    <string name="sf_advancedpreferences_title">Advanced Settings</string>
    <string name="sf_advancedpreferences_restricttypes_title">Offered Types</string>
    <string name="app_settings">App Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_game">Game Settings</string>
    <string name="settings_language">Language</string>
    <string name="restrict_sudoku_types">Restrict Sudoku Types</string>
    <string name="restrict_sudoku_types_desc">Choose which sudoku types to show</string>
    <string name="language_settings">Language</string>
    <string name="language_settings_desc">Change app language</string>
    <string name="profile_preference_button_settings">Settings</string>
    <string name="settings_keyboard_layout">Keyboard Layout</string>
    <string name="settings_keyboard_layout_desc">Choose number keyboard layout style</string>
    <string name="keyboard_layout_grid">Grid (3×3)</string>
    <string name="keyboard_layout_horizontal">Horizontal Row</string>
    <string name="check_mark" translatable="false">✔</string>
    <string name="tx_no_sudokus_to_load">No saved Sudokus available.</string>
    <string name="sudokuloading_delete_finished">Delete finished Sudokus</string>
    <string name="sudokuloading_delete_all"     >Delete all Sudokus</string>
    <string name="time_format" translatable="false">HH:mm:ss dd.MM.yyyy</string>
    <string name="sf_loading_back">Go back!</string>
    <string name="sudokuloading_dialog_play">play</string>
    <string name="sudokuloading_dialog_delete">delete</string>
    <string name="profile_file_prefix"  translatable="false">profile_</string>
    <string name="game_file_prefix" translatable="false">game_</string>
    <string name="sudoku_file_prefix"   translatable="false">sudoku_</string>
    <string name="current_profile_file" translatable="false">current_profile</string>
    <string name="path_rel_profiles" translatable="false">profiles</string>
    <string name="path_rel_sudokus"  translatable="false">sudokus</string>
    <string name="default_user_name">Profile 1</string>
    <string name="menu_settings" translatable="false">MENU_SETTINGS</string>
    <string name="fab_go_back">Click to delete.\nClick button again to stop deleting</string>
    <string name="sf_sudokuloading_title">Saved Sudokus</string>
    <string name="hint_lastdigit">Look at the highlighted {shape}! There\'s only one cell left.</string>
    <string name="constraintshape_row_accusative_determined"     >row</string>
    <string name="constraintshape_column_accusative_determined"  >column</string>
    <string name="constraintshape_diagonal_accusative_determined">diagonal</string>
    <string name="constraintshape_block_accusative_determined"   >block</string>
    <string name="constraintshape_other_accusative_determined"   >group</string>
    <string name="constraintshape_row_genitive_determined"     >row</string>
    <string name="constraintshape_column_genitive_determined"  >column</string>
    <string name="constraintshape_diagonal_genitive_determined">diagonal</string>
    <string name="constraintshape_block_genitive_determined"   >block</string>
    <string name="constraintshape_other_genitive_determined"   >group</string>
    <string name="constraintshape_row_dative_determined"     >rows</string>
    <string name="constraintshape_column_dative_determined"  >columns</string>
</resources>