<?xml version="1.0" encoding="utf-8"?><!-- SudoQ is a Sudoku-App for Adroid Devices with Version 2.2 at least. -->
<!-- Copyright (C) 2012  Haiko Klare, Julian Geppert, Jan-Bernhard Kordaß, Jonathan Kieling, Tim Zeitz, Timo Abele -->
<!-- This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.  -->
<!-- This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_serious"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/title_gametypeselection"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <Button
        android:id="@+id/button_gametypeselection_local_sudoku"
        style="@style/style_gametypeselection_buttons"
        android:layout_height="wrap_content"
        android:onClick="switchActivity"
        android:text="@string/sf_gametypeselection_local_sudoku" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/subtitle_gametypeselection_mp"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <Button
        android:id="@+id/button_gametypeselection_create_mp"
        style="@style/style_gametypeselection_buttons"
        android:layout_height="wrap_content"
        android:onClick="switchActivity"
        android:text="@string/sf_gametypeselection_create_mp" />

    <Button
        android:id="@+id/button_gametypeselection_join_mp"
        style="@style/style_gametypeselection_buttons"
        android:layout_height="wrap_content"
        android:onClick="switchActivity"
        android:text="@string/sf_gametypeselection_join_mp" />

</LinearLayout>
